chore: add myself to contributors (#7206)

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"Vlad Frangu <kingdgrizzle@gmail.com>",
 		"Crawl <icrawltogo@gmail.com>",
 		"Amish Shah <amishshah.2k@gmail.com>",
-		"SpaceEEC <spaceeec@yahoo.com>"
+		"SpaceEEC <spaceeec@yahoo.com>",
+		"Antonio Roman <kyradiscord@gmail.com>"
 	],
 	"license": "Apache-2.0",
 	"keywords": [
