--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@discordjs/builders",
-	"version": "0.11.0",
+	"version": "0.12.0",
 	"description": "A set of builders that you can use when creating your bot",
 	"scripts": {
 		"build": "tsup",
@@ -9,7 +9,7 @@
 		"format": "prettier --write . && eslint src __tests__ --ext mjs,js,ts --fix",
 		"docs": "typedoc --json docs/typedoc-out.json src/index.ts && node scripts/docs.mjs",
 		"prepublishOnly": "yarn build && yarn lint && yarn test",
-		"changelog": "git cliff --prepend ./CHANGELOG.md -l -c ./cliff.toml -r ../../ --include-path 'packages/builders/*'"
+		"changelog": "git cliff --prepend ./CHANGELOG.md -u -c ./cliff.toml -r ../../ --include-path 'packages/builders/*'"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -51,24 +51,24 @@
 	},
 	"homepage": "https://discord.js.org",
 	"dependencies": {
-		"@sindresorhus/is": "^4.2.1",
+		"@sindresorhus/is": "^4.3.0",
 		"discord-api-types": "^0.26.1",
 		"ts-mixer": "^6.0.0",
 		"tslib": "^2.3.1",
 		"zod": "^3.11.6"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.16.5",
+		"@babel/core": "^7.16.12",
 		"@babel/plugin-proposal-decorators": "^7.16.5",
-		"@babel/preset-env": "^7.16.8",
+		"@babel/preset-env": "^7.16.11",
 		"@babel/preset-typescript": "^7.16.5",
 		"@discordjs/ts-docgen": "^0.3.4",
 		"@types/jest": "^27.0.3",
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "^5.9.1",
-		"@typescript-eslint/parser": "^5.9.1",
+		"@typescript-eslint/eslint-plugin": "^5.10.0",
+		"@typescript-eslint/parser": "^5.10.0",
 		"babel-plugin-transform-typescript-metadata": "^0.3.2",
-		"eslint": "^8.5.0",
+		"eslint": "^8.7.0",
 		"eslint-config-marine": "^9.3.2",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
@@ -76,8 +76,8 @@
 		"prettier": "^2.5.1",
 		"standard-version": "^9.3.2",
 		"tsup": "^5.11.11",
-		"typedoc": "^0.22.10",
-		"typescript": "^4.5.4"
+		"typedoc": "^0.22.11",
+		"typescript": "^4.5.5"
 	},
 	"engines": {
 		"node": ">=16.9.0"
