--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
 		"emitDecoratorMetadata": true,
 		"exactOptionalPropertyTypes": false
 	},
-	"include": ["src/**/*.ts"]
+	"include": ["src/**/*.ts", "src/**/*.js", "src/**/*.cjs", "src/**/*.mjs", "bin"],
+	"exclude": ["node_modules"]
 }
