--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
 	"dependencies": {
 		"@discordjs/formatters": "workspace:^",
 		"@discordjs/util": "workspace:^",
-		"@sapphire/shapeshift": "^3.9.3",
+		"@sapphire/shapeshift": "^3.9.5",
 		"discord-api-types": "0.37.61",
 		"fast-deep-equal": "^3.1.3",
 		"ts-mixer": "^6.0.3",
@@ -74,18 +74,18 @@
 	},
 	"devDependencies": {
 		"@discordjs/api-extractor": "workspace:^",
-		"@favware/cliff-jumper": "^2.2.1",
+		"@favware/cliff-jumper": "^2.2.3",
 		"@types/node": "16.18.60",
 		"@vitest/coverage-v8": "^0.34.6",
 		"cross-env": "^7.0.3",
 		"downlevel-dts": "^0.11.0",
 		"esbuild-plugin-version-injector": "^1.2.1",
-		"eslint": "^8.53.0",
+		"eslint": "^8.56.0",
 		"eslint-config-neon": "^0.1.57",
 		"eslint-formatter-pretty": "^5.0.0",
-		"prettier": "^3.1.0",
+		"prettier": "^3.1.1",
 		"tsup": "^7.2.0",
-		"turbo": "^1.10.17-canary.0",
+		"turbo": "^1.11.2",
 		"typescript": "^5.2.2",
 		"vitest": "^0.34.6"
 	},
